--- a/WebContent/input.css
+++ b/WebContent/input.css
@@ -1,56 +1,122 @@
 @CHARSET "ISO-8859-1";
-.input{
-height: 35px;	
-width: 225px;	
-background-color: #EFEFEF;
-color: #4C4C4C;	
-font-family: Arial;	
-font-size: 14px;	
-line-height: 18px;
-padding-left:13px;
-margin-left:20px;
+
+.input {
+	height: 35px;
+	width: 225px;
+	background-color: #FFFFFF;
+	color: #4C4C4C;
+	font-family: Arial;
+	font-size: 14px;
+	line-height: 18px;
+
 }
-.inputinterval{
-height: 35px;	
-width: 225px;	
-background-color: #EFEFEF;
-color: #4C4C4C;	
-font-family: Arial;	
-font-size: 14px;	
-line-height: 18px;
-padding-left:13px;
-margin-left:52px;
+
+.inputinterval {
+	height: 35px;
+	width: 225px;
+	background-color: #FFFFFF;
+	color: #4C4C4C;
+	font-family: Arial;
+	font-size: 14px;
+	line-height: 18px;
+	padding-left: 13px;
+	margin-left: 54px;
 }
-.inputstartindex{
-height: 35px;	
-width: 225px;	
-background-color: #EFEFEF;
-color: #4C4C4C;	
-font-family: Arial;	
-font-size: 14px;	
-line-height: 18px;
-padding-left:13px;
-margin-left:38px;
+
+.inputstartindex {
+	height: 35px;
+	width: 225px;
+	background-color: #FFFFFF;
+	color: #4C4C4C;
+	font-family: Arial;
+	font-size: 14px;
+	line-height: 18px;
+	padding-left: 13px;
+	margin-left: 38px;
 }
-.submit{
-height: 35px;	
-width: 100px;	
-background-color: #1c61a6;
-color: #f7f7f8;	
-font-family: Arial;	
-font-size: 20px;	
-line-height: 18px;
-padding-left:13px;
-margin-left:130px;
+
+.submit {
+	height: 35px;
+	width: 100px;
+	background-color: #FFFF00;
+	color: #4C4C4C;
+	font-family: Arial;
+	font-size: 20px;
+	line-height: 18px;
+	padding-left: 13px;
+	margin-left: 130px;
 }
-.submitfibonacci{
-height: 35px;	
-width: 100px;	
-background-color: #1c61a6;
-color: #f7f7f8;	
-font-family: Arial;	
-font-size: 20px;	
-line-height: 18px;
-padding-left:13px;
-margin-left:50px;
+
+.submitfibonacci {
+	height: 35px;
+	width: 100px;
+	background-color: #1c61a6;
+	color: #f7f7f8;
+	font-family: Arial;
+	font-size: 20px;
+	line-height: 18px;
+	padding-left: 13px;
+	margin-left: 50px;
+}
+
+body {
+	background-image: url("bgimage3.jpg");
+	background-position: 50% 30%;
+	background-repeat: no-repeat;
+}
+
+#shadowdiv {
+	margin-left: 250px;
+	margin-top: 200px; background-color : #FFFFFF;
+	filter: alpha(Opacity = 80);
+	-moz-opacity: 0.5;
+	opacity: 0.5;
+	background-color: #FFFFFF;
+}
+
+#shadeDivWrap {
+	width: 141px;
+	margin: 0px 1px;
+	z-index: 10;
+	height: 72px;
+	padding-top: 10px;
+	position: absolute;
+	top: 172px;
+}
+
+#shadeDiv {
+	width: 141px;
+	height: 72px;
+	background-color: #777777; /*:rgba(0,0,0,0.3);*/
+	opacity: 0.57;
+	filter: alpha(opacity = 57);
+	z-index: -1;
+	position: absolute;
+}
+
+.shadeDivWrap p {
+	width: 100%;
+	text-align: center;
+	margin-top: 3px;
+}
+#container {
+    color: #154BA0;
+    background: #ff0000;
+    filter: Alpha(Opacity=10, Style=0);
+    opacity: 0.10;
+    position: absolute;
+    height: 200px;
+    width:500px;
+    z-index:20;
+}
+#text {
+    position: absolute;
+    opacity:1;
+    height: 200px;
+    width:500px;
+    text-align:center;
+    z-index:30;
+}
+h{
+	font-family:Tahoma;
 }
